Implementing basic navigation

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script type="text/javascript" src="js/index.js"></script>
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="/images/Favicon.svg">
+    <title>Bike With Me</title>
 </head>
-<body>
-    <div id="app"></div>
+<body id="app">
+    <custom-header id="custom-header" selected-page="1"></custom-header>
+    <main-content id="main-content" page-id="1"></main-content>
+<!--    <main>-->
+<!--      <article class="contact-page">-->
+<!--          <section class="contact-header">User service</section>-->
+<!--              <form class="contact-form">-->
+<!--                  <section class="gender-input">-->
+<!--                      <input type="radio">-->
+<!--                      <label></label>-->
+<!--                  </section>-->
+<!--                  <section></section>-->
+<!--                  <section></section>-->
+<!--                  <section></section>-->
+<!--                  <section></section>-->
+<!--              </form>-->
+<!--      </article>-->
+<!--    </main>-->
+    <custom-footer></custom-footer>
 </body>
+<script>
+</script>
 </html>
