--- a/index.html
+++ b/index.html
@@ -10,24 +10,8 @@
 </head>
 <body id="app">
     <custom-header id="custom-header" selected-page="1"></custom-header>
+    <navigation-drawer selected-page="1" id="drawer"></navigation-drawer>
     <main-content id="main-content" page-id="1"></main-content>
-<!--    <main>-->
-<!--      <article class="contact-page">-->
-<!--          <section class="contact-header">User service</section>-->
-<!--              <form class="contact-form">-->
-<!--                  <section class="gender-input">-->
-<!--                      <input type="radio">-->
-<!--                      <label></label>-->
-<!--                  </section>-->
-<!--                  <section></section>-->
-<!--                  <section></section>-->
-<!--                  <section></section>-->
-<!--                  <section></section>-->
-<!--              </form>-->
-<!--      </article>-->
-<!--    </main>-->
     <custom-footer></custom-footer>
 </body>
-<script>
-</script>
 </html>
