--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ihor Buriakov - 713289">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/index.js"></script>
     <link rel="icon" type="image/x-icon" href="./images/Favicon.svg">
     <title>Bike With Me</title>
 </head>
 <body id="app">
     <custom-header id="custom-header" selected-page="1"></custom-header>
     <navigation-drawer selected-page="1" id="drawer"></navigation-drawer>
+    <section id="cookies-banner">
+        <strong>This website uses cookies information!</strong>
+        <span class="close-icon" onclick="closeCookiesMessage()">&times;</span>
+    </section>
     <main-content id="main-content" page-id="1"></main-content>
     <custom-footer></custom-footer>
 </body>
