Solving warning from the checker

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <custom-header id="custom-header" selected-page="1"></custom-header>
     <navigation-drawer selected-page="1" id="drawer"></navigation-drawer>
     <section id="cookies-banner">
-        <strong>This website uses cookies information!</strong>
+        <h2>This website uses cookies information!</h2>
         <span class="close-icon" onclick="closeCookiesMessage()">&times;</span>
     </section>
     <main-content id="main-content" page-id="1"></main-content>
