--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Ihor Buriakov - 713289">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="js/index.js"></script>
-    <link rel="icon" type="image/x-icon" href="./images/Favicon.svg">
+    <link rel="icon" type="image/x-icon" href="img/Favicon.svg">
     <title>Bike With Me</title>
 </head>
 <body id="app">
