--- a/index.html
+++ b/index.html
@@ -10,13 +10,121 @@
     <title>Bike With Me</title>
 </head>
 <body id="app">
-    <custom-header id="custom-header" selected-page="1"></custom-header>
-    <navigation-drawer selected-page="1" id="drawer"></navigation-drawer>
-    <section id="cookies-banner">
-        <h2>This website uses cookies information!</h2>
-        <span class="close-icon" onclick="closeCookiesMessage()">&times;</span>
+<header>
+    <img src="./img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
+    <a href="index.html"><img src="./img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
+    <nav>
+        <ul class="navigation-list">
+            <li value="1" class="selected-title"><a href="index.html">Home</a></li>
+            <li value="2"><a href="/article1">Forest adventure</a></li>
+            <li value="3"><a href="/article2">Historical ride</a></li>
+            <li value="4"><a href="/article3">Utrecht urban escape</a></li>
+            <li value="5"><a href="/article4">Utrecht to Houten</a></li>
+            <li value="6"><a href="/contactus">Contact us</a></li>
+        </ul>
+    </nav>
+</header>
+<aside id="navigation-drawer" class="drawer-closed">
+    <section class="navigation-content">
+        <section class="drawer-header">
+            <img src="./img/Logo.svg" alt="Logo" title="Logo">
+            <img src="./img/menu.svg"
+                 alt="Menu"
+                 title="Menu"
+                 class="menu-icon"
+                 onclick="closeDrawer()"
+            >
+        </section>
+        <nav class="drawer-navigation">
+            <ul class="drawer-navigation-list">
+                <li value="1" class="selected-title"><a href="index.html">Home</a></li>
+                <li value="2"><a href="/article1">Forest adventure</a></li>
+                <li value="3"><a href="/article2">Historical ride</a></li>
+                <li value="4"><a href="/article3">Utrecht urban escape</a></li>
+                <li value="5"><a href="/article4">Utrecht to Houten</a></li>
+            </ul>
+        </nav>
+        <section class="contact-us-drawer"><a href="/contactus">Contact us</a></section>
     </section>
-    <main-content id="main-content" page-id="1"></main-content>
-    <custom-footer></custom-footer>
+    <section id="overlay"></section>
+</aside>
+<section id="cookies-banner">
+    <h2>This website uses cookies information!</h2>
+    <span class="close-icon" onclick="closeCookiesMessage()">×</span>
+</section>
+<main id="content-container">
+    <figure class="home-picture-container">
+        <img class="home-picture" src="./img/home-picture.jpg" alt="Bike in the woods homepage picture"
+             title="Bike in a forest">
+        <p class="image-text-centered">Welcome to Bike with me</p>
+        <p class="image-text-centered-bottom">Discover the Utrecht region's breathtaking beauty and rich cycling
+            heritage with us. Our website offers a diverse range of biking routes to cater to cycling enthusiasts.
+            Explore the charming canals of Utrecht city or embrace the tranquillity of the Dutch countryside. Plan
+            your adventure with detailed route descriptions, maps, and essential information. Connect with our
+            passionate cycling community and make lasting memories while reducing your carbon footprint. Start your
+            Utrecht cycling adventure today!</p>
+        <figcaption>Bike in woods</figcaption>
+    </figure>
+    <article>
+        <h2>Articles</h2>
+        <section class="articles-grid">
+            <article class="article-preview">
+                <img class="article-preview-picture" src="./img/first/forest.jpg" alt="Forest" title="Nieuw Wulven">
+                <section class="article-description">
+                    <h3>Forest adventure</h3>
+                    <p><em>Embark</em> on a captivating biking journey through the enchanting Nieuw Wulven Forest.
+                        This pristine natural oasis, located in the heart of the Utrecht region, offers a serene and
+                        invigorating experience for cyclists of all levels.</p>
+                    <button class="view-button" onclick="window.location.pathname = '/article1'"><strong>Read
+                        more</strong></button>
+                </section>
+            </article>
+            <article class="article-preview">
+                <img class="article-preview-picture" src="./img/road.jpg" alt="Road" title="Road to Bunnik">
+                <section class="article-description">
+                    <h3>Historical ride</h3>
+                    <p>This <em>biking route</em> seamlessly combines natural beauty, history, relaxation, and the
+                        whimsical joy of DuckCity. Revel in the serene riverside views, explore charming villages,
+                        savor refreshments at Theehuis Rhijnauwen, and create unforgettable memories with at
+                        DuckCity.</p>
+                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
+                        more</strong></button>
+                </section>
+            </article>
+            <article class="article-preview">
+                <img class="article-preview-picture" src="./img/utrecht.jpg" alt="Utrecht channels"
+                     title="Utrecht city center">
+                <section class="article-description">
+                    <h3>Bunnik to Utrecht Urban Escape</h3>
+                    <p><em>Embark</em> on a captivating biking journey from the charming Bunnik to the vibrant heart
+                        of Utrecht.</p>
+                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
+                        more</strong></button>
+                </section>
+            </article>
+            <article class="article-preview">
+                <img class="article-preview-picture" src="./img/bridge.jpg" alt="Bridge"
+                     title="Bridge across a highway">
+                <section class="article-description">
+                    <h3>Utrecht to Houten</h3>
+                    <p><em>Embark</em> on a delightful biking journey from the heart of Utrecht to the charming town
+                        of Houten, weaving through the scenic neighborhood of Utrecht Lunetten. This route combines
+                        the vibrant energy of Utrecht with the tranquil charm of the countryside, offering a cycling
+                        experience that captures the essence of the region.</p>
+                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
+                        more</strong></button>
+                </section>
+            </article>
+        </section>
+    </article>
+</main>
+<footer>
+    <small class="copyright">&copy; Copyright 2023</small>
+    <section class="contact-details">
+        <img src="./img/mail.svg" alt="mail" title="Mail us">
+        <img src="./img/phone.svg" alt="phone" title="Call us">
+        <img src="./img/instagram.svg" alt="instagram" title="Find us on instagram">
+    </section>
+</footer>
 </body>
 </html>
