Fixing links for github pages

--- a/article4/index.html
+++ b/article4/index.html
@@ -16,11 +16,11 @@
     <nav>
         <ul class="navigation-list">
             <li value="1"><a href="..">Home</a></li>
-            <li value="2"><a href="/article1">Forest adventure</a></li>
-            <li value="3"><a href="/article2">Historical ride</a></li>
-            <li value="4"><a href="/article3">Utrecht urban escape</a></li>
-            <li value="5" class="selected-title"><a href="/article4">Utrecht to Houten</a></li>
-            <li value="6"><a href="/contactus">Contact us</a></li>
+            <li value="2"><a href="./article1">Forest adventure</a></li>
+            <li value="3"><a href="./article2">Historical ride</a></li>
+            <li value="4"><a href="./article3">Utrecht urban escape</a></li>
+            <li value="5" class="selected-title"><a href="./article4">Utrecht to Houten</a></li>
+            <li value="6"><a href="./contactus">Contact us</a></li>
         </ul>
     </nav>
 </header>
@@ -38,13 +38,13 @@
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
                 <li value="1"><a href="..">Home</a></li>
-                <li value="2"><a href="/article1">Forest adventure</a></li>
-                <li value="3"><a href="/article2">Historical ride</a></li>
-                <li value="4"><a href="/article3">Utrecht urban escape</a></li>
-                <li value="5" class="selected-title"><a href="/article4">Utrecht to Houten</a></li>
+                <li value="2"><a href="./article1">Forest adventure</a></li>
+                <li value="3"><a href="./article2">Historical ride</a></li>
+                <li value="4"><a href="./article3">Utrecht urban escape</a></li>
+                <li value="5" class="selected-title"><a href="./article4">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="/contactus">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="./contactus">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
