--- a/redirect.html
+++ b/redirect.html
@@ -57,7 +57,7 @@
         </a>
     </section>
 </main>
-<footer><small class="copyright">&copy; Copyright 2023</small>
+<footer><small class="copyright">&copy; Copyright 2023, Web Markup</small>
     <section class="contact-details">
         <img src="./img/mail.svg" alt="mail" title="Mail us">
         <img src="./img/phone.svg" alt="phone" title="Call us">
