Solving validator errors

--- a/article3/index.html
+++ b/article3/index.html
@@ -15,12 +15,12 @@
     <a href=".."><img src="../img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
     <nav>
         <ul class="navigation-list">
-            <li value="1"><a href="..">Home</a></li>
-            <li value="2"><a href="../article1">Forest adventure</a></li>
-            <li value="3"><a href="../article2">Historical ride</a></li>
-            <li value="4" class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
-            <li value="5"><a href="../article4">Utrecht to Houten</a></li>
-            <li value="6"><a href="../contactus">Contact us</a></li>
+            <li><a href="..">Home</a></li>
+            <li><a href="../article1">Forest adventure</a></li>
+            <li><a href="../article2">Historical ride</a></li>
+            <li class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
+            <li><a href="../article4">Utrecht to Houten</a></li>
+            <li><a href="../contactus">Contact us</a></li>
         </ul>
     </nav>
 </header>
@@ -37,11 +37,11 @@
         </section>
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
-                <li value="1"><a href="..">Home</a></li>
-                <li value="2"><a href="../article1">Forest adventure</a></li>
-                <li value="3"><a href="../article2">Historical ride</a></li>
-                <li value="4" class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
-                <li value="5"><a href="../article4">Utrecht to Houten</a></li>
+                <li><a href="..">Home</a></li>
+                <li><a href="../article1">Forest adventure</a></li>
+                <li><a href="../article2">Historical ride</a></li>
+                <li class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
+                <li><a href="../article4">Utrecht to Houten</a></li>
             </ul>
         </nav>
         <section class="contact-us-drawer"><a href="../contactus">Contact us</a></section>
