--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <nav>
         <ul class="navigation-list">
             <li class="selected-title"><a href="index.html">Home</a></li>
-            <li><a href="./article1">Forest adventure</a></li>
-            <li><a href="./article2">Historical ride</a></li>
-            <li><a href="./article3">Utrecht urban escape</a></li>
-            <li><a href="./article4">Utrecht to Houten</a></li>
-            <li><a href="./contactus">Contact us</a></li>
+            <li><a href="./article1.html">Forest adventure</a></li>
+            <li><a href="./article2.html">Historical ride</a></li>
+            <li><a href="./article3.html">Utrecht urban escape</a></li>
+            <li><a href="./article4.html">Utrecht to Houten</a></li>
+            <li><a href="./contactus.html">Contact us</a></li>
         </ul>
     </nav>
 </header>
@@ -38,13 +38,13 @@
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
                 <li class="selected-title"><a href="index.html">Home</a></li>
-                <li><a href="./article1">Forest adventure</a></li>
-                <li><a href="./article2">Historical ride</a></li>
-                <li><a href="./article3">Utrecht urban escape</a></li>
-                <li><a href="./article4">Utrecht to Houten</a></li>
+                <li><a href="./article1.html">Forest adventure</a></li>
+                <li><a href="./article2.html">Historical ride</a></li>
+                <li><a href="./article3.html">Utrecht urban escape</a></li>
+                <li><a href="./article4.html">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="./contactus">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="./contactus.html">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
@@ -75,8 +75,10 @@
                     <p><em>Embark</em> on a captivating biking journey through the enchanting Nieuw Wulven Forest.
                         This pristine natural oasis, located in the heart of the Utrecht region, offers a serene and
                         invigorating experience for cyclists of all levels.</p>
-                    <button class="view-button" onclick="window.location.pathname = '/article1'"><strong>Read
-                        more</strong></button>
+                    <a href="article1.html">
+                        <button class="view-button"><strong>Read
+                            more</strong></button>
+                    </a>
                 </section>
             </article>
             <article class="article-preview">
@@ -87,8 +89,10 @@
                         whimsical joy of DuckCity. Revel in the serene riverside views, explore charming villages,
                         savor refreshments at Theehuis Rhijnauwen, and create unforgettable memories with at
                         DuckCity.</p>
-                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
-                        more</strong></button>
+                    <a href="article2.html">
+                        <button class="view-button"><strong>Read
+                            more</strong></button>
+                    </a>
                 </section>
             </article>
             <article class="article-preview">
@@ -98,8 +102,10 @@
                     <h3>Bunnik to Utrecht Urban Escape</h3>
                     <p><em>Embark</em> on a captivating biking journey from the charming Bunnik to the vibrant heart
                         of Utrecht.</p>
-                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
-                        more</strong></button>
+                    <a href="article3.html">
+                        <button class="view-button"><strong>Read
+                            more</strong></button>
+                    </a>
                 </section>
             </article>
             <article class="article-preview">
@@ -111,8 +117,10 @@
                         of Houten, weaving through the scenic neighborhood of Utrecht Lunetten. This route combines
                         the vibrant energy of Utrecht with the tranquil charm of the countryside, offering a cycling
                         experience that captures the essence of the region.</p>
-                    <button class="view-button" onclick="window.location.pathname = '/article2'"><strong>Read
-                        more</strong></button>
+                    <a href="article4.html">
+                        <button class="view-button"><strong>Read
+                            more</strong></button>
+                    </a>
                 </section>
             </article>
         </section>
