--- a/redirect.html
+++ b/redirect.html
@@ -16,11 +16,11 @@
     <nav>
         <ul class="navigation-list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="./article1">Forest adventure</a></li>
-            <li><a href="./article2">Historical ride</a></li>
-            <li><a href="./article3">Utrecht urban escape</a></li>
-            <li><a href="./article4">Utrecht to Houten</a></li>
-            <li><a href="./contactus">Contact us</a></li>
+            <li><a href="./article1.html">Forest adventure</a></li>
+            <li><a href="./article2.html">Historical ride</a></li>
+            <li><a href="./article3.html">Utrecht urban escape</a></li>
+            <li><a href="./article4.html">Utrecht to Houten</a></li>
+            <li><a href="./contactus.html">Contact us</a></li>
         </ul>
     </nav>
 </header>
@@ -38,13 +38,13 @@
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="./article1">Forest adventure</a></li>
-                <li><a href="./article2">Historical ride</a></li>
-                <li><a href="./article3">Utrecht urban escape</a></li>
-                <li><a href="./article4">Utrecht to Houten</a></li>
+                <li><a href="./article1.html">Forest adventure</a></li>
+                <li><a href="./article2.html">Historical ride</a></li>
+                <li><a href="./article3.html">Utrecht urban escape</a></li>
+                <li><a href="./article4.html">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="./contactus">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="./contactus.html">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
