--- a/article1.html
+++ b/article1.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ihor Buriakov - 713289">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script src="../js/index.js"></script>
-    <link rel="icon" type="image/x-icon" href="../img/Favicon.svg">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <script src="./js/index.js"></script>
+    <link rel="icon" type="image/x-icon" href="./img/Favicon.svg">
     <title>Bike With Me</title>
 </head>
 <body id="app">
 <header>
-    <img src="../img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
-    <a href=".."><img src="../img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
+    <img src="./img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
+    <a href="index.html"><img src="./img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
     <nav>
         <ul class="navigation-list">
-            <li><a href="..">Home</a></li>
-            <li class="selected-title"><a href="../article1">Forest adventure</a></li>
-            <li><a href="../article2">Historical ride</a></li>
-            <li><a href="../article3">Utrecht urban escape</a></li>
-            <li><a href="../article4">Utrecht to Houten</a></li>
-            <li><a href="../contactus">Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="selected-title"><a href="./article1.html">Forest adventure</a></li>
+            <li><a href="./article2.html">Historical ride</a></li>
+            <li><a href="./article3.html">Utrecht urban escape</a></li>
+            <li><a href="./article4.html">Utrecht to Houten</a></li>
+            <li><a href="./contactus.html">Contact us</a></li>
         </ul>
     </nav>
 </header>
 <aside id="navigation-drawer" class="drawer-closed">
     <section class="navigation-content">
         <section class="drawer-header">
-            <img src="../img/Logo.svg" alt="Logo" title="Logo">
-            <img src="../img/menu.svg"
+            <img src="./img/Logo.svg" alt="Logo" title="Logo">
+            <img src="./img/menu.svg"
                  alt="Menu"
                  title="Menu"
                  class="menu-icon"
@@ -37,35 +37,35 @@
         </section>
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
-                <li><a href="..">Home</a></li>
-                <li class="selected-title"><a href="./article1">Forest adventure</a></li>
-                <li><a href="../article2">Historical ride</a></li>
-                <li><a href="../article3">Utrecht urban escape</a></li>
-                <li><a href="../article4">Utrecht to Houten</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="selected-title"><a href="./article1.html">Forest adventure</a></li>
+                <li><a href="article2.html">Historical ride</a></li>
+                <li><a href="article3.html">Utrecht urban escape</a></li>
+                <li><a href="article4.html">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="../contactus">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="contactus.html">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
 <main id="content-container">
     <article class="content-container"><h1>Nieuw Wulven Forest Adventure</h1>
         <section class="article-section"><h2>Forest magic</h2>
-            <section class="article-content"><img class="article-picture" src="../img/first/forest.jpg" alt="Forest"
+            <section class="article-content"><img class="article-picture" src="./img/first/forest.jpg" alt="Forest"
                                                   title="Forest magic">
                 <p class="article-text">Embark on a captivating biking journey through the enchanting Nieuw Wulven
                     Forest. This pristine natural oasis, located in the heart of the Utrecht region, offers a serene and
                     invigorating experience for cyclists of all levels.</p></section>
         </section>
         <section class="article-section"><h2>Tranquil Woodland Trails</h2>
-            <section class="article-content"><img class="article-picture" src="../img/first/road.jpg" alt="Road"
+            <section class="article-content"><img class="article-picture" src="./img/first/road.jpg" alt="Road"
                                                   title="Tranquil Woodland Trails">
                 <p class="article-text">Wind your way through a labyrinth of peaceful woodland trails, surrounded by
                     towering trees and the soothing sounds of nature. The Nieuw Wulven Forest is a haven for those
                     seeking a serene escape from the hustle and bustle of daily life.</p></section>
         </section>
         <section class="article-section"><h2>Family-Friendly trip</h2>
-            <section class="article-content"><img class="article-picture" src="../img/first/field.jpg" alt="Field"
+            <section class="article-content"><img class="article-picture" src="./img/first/field.jpg" alt="Field"
                                                   title="Family-Friendly trip">
                 <p class="article-text">This route is perfect for families, offering a gentle, mostly flat terrain
                     that's suitable for riders of all ages. It's an ideal outing for parents and children to enjoy
@@ -85,9 +85,9 @@
 </main>
 <footer><small class="copyright">&copy; Copyright 2023</small>
     <section class="contact-details">
-        <img src="../img/mail.svg" alt="mail" title="Mail us">
-        <img src="../img/phone.svg" alt="phone" title="Call us">
-        <img src="../img/instagram.svg" alt="instagram" title="Find us on instagram">
+        <img src="./img/mail.svg" alt="mail" title="Mail us">
+        <img src="./img/phone.svg" alt="phone" title="Call us">
+        <img src="./img/instagram.svg" alt="instagram" title="Find us on instagram">
     </section>
 </footer>
 </body>
