--- a/article3.html
+++ b/article3.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ihor Buriakov - 713289">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script src="../js/index.js"></script>
-    <link rel="icon" type="image/x-icon" href="../img/Favicon.svg">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <script src="./js/index.js"></script>
+    <link rel="icon" type="image/x-icon" href="./img/Favicon.svg">
     <title>Bike With Me</title>
 </head>
 <body id="app">
 <header>
-    <img src="../img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
-    <a href=".."><img src="../img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
+    <img src="./img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
+    <a href="index.html"><img src="./img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
     <nav>
         <ul class="navigation-list">
-            <li><a href="..">Home</a></li>
-            <li><a href="../article1">Forest adventure</a></li>
-            <li><a href="../article2">Historical ride</a></li>
-            <li class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
-            <li><a href="../article4">Utrecht to Houten</a></li>
-            <li><a href="../contactus">Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="article1.html">Forest adventure</a></li>
+            <li><a href="article2.html">Historical ride</a></li>
+            <li class="selected-title"><a href="article3.html">Utrecht urban escape</a></li>
+            <li><a href="article4.html">Utrecht to Houten</a></li>
+            <li><a href="contactus.html">Contact us</a></li>
         </ul>
     </nav>
 </header>
 <aside id="navigation-drawer" class="drawer-closed">
     <section class="navigation-content">
         <section class="drawer-header">
-            <img src="../img/Logo.svg" alt="Logo" title="Logo">
-            <img src="../img/menu.svg"
+            <img src="./img/Logo.svg" alt="Logo" title="Logo">
+            <img src="./img/menu.svg"
                  alt="Menu"
                  title="Menu"
                  class="menu-icon"
@@ -37,28 +37,28 @@
         </section>
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
-                <li><a href="..">Home</a></li>
-                <li><a href="../article1">Forest adventure</a></li>
-                <li><a href="../article2">Historical ride</a></li>
-                <li class="selected-title"><a href="../article3">Utrecht urban escape</a></li>
-                <li><a href="../article4">Utrecht to Houten</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="article1.html">Forest adventure</a></li>
+                <li><a href="article2.html">Historical ride</a></li>
+                <li class="selected-title"><a href="article3.html">Utrecht urban escape</a></li>
+                <li><a href="article4.html">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="../contactus">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="contactus.html">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
 <main id="content-container">
     <article class="content-container"><h1>Bunnik to Utrecht Urban Escape</h1>
         <section class="article-section"><h2>Back to Urban</h2>
-            <section class="article-content"><img class="article-picture" src="../img/third/road.jpg"
+            <section class="article-content"><img class="article-picture" src="./img/third/road.jpg"
                                                   alt="Beautiful forest road" title="Back to Urban">
                 <p class="article-text">Embark on a captivating biking journey from the charming Bunnik to the vibrant
                     heart of Utrecht. This picturesque route seamlessly transitions from serene woodland to the bustling
                     urban landscape, offering a unique and memorable cycling experience.</p></section>
         </section>
         <section class="article-section"><h2>Woodland Magic</h2>
-            <section class="article-content"><img class="article-picture" src="../img/third/lake.jpg" alt="Woodland lake"
+            <section class="article-content"><img class="article-picture" src="./img/third/lake.jpg" alt="Woodland lake"
                                                   title="Woodland Magic">
                 <p class="article-text">Begin your ride amidst the enchanting forest trails near Bunnik, where the
                     whispering leaves and dappled sunlight create a fairytale-like ambiance.
@@ -66,7 +66,7 @@
                     water and the abundant greenery that lines the banks.</p></section>
         </section>
         <section class="article-section"><h2>Utrecht's Vibrant Center</h2>
-            <section class="article-content"><img class="article-picture" src="../img/utrecht.jpg"
+            <section class="article-content"><img class="article-picture" src="./img/utrecht.jpg"
                                                   alt="Utrecht's city center" title="Utrecht's Vibrant Center">
                 <p class="article-text">Your route culminates in Utrecht's city center, where you'll find a bustling
                     atmosphere, charming canals, shops, cafes, and the city's rich cultural heritage waiting to be
@@ -85,9 +85,9 @@
 </main>
 <footer><small class="copyright">&copy; Copyright 2023</small>
     <section class="contact-details">
-        <img src="../img/mail.svg" alt="mail" title="Mail us">
-        <img src="../img/phone.svg" alt="phone" title="Call us">
-        <img src="../img/instagram.svg" alt="instagram" title="Find us on instagram">
+        <img src="./img/mail.svg" alt="mail" title="Mail us">
+        <img src="./img/phone.svg" alt="phone" title="Call us">
+        <img src="./img/instagram.svg" alt="instagram" title="Find us on instagram">
     </section>
 </footer>
 </body>
