--- a/contactus.html
+++ b/contactus.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ihor Buriakov - 713289">
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <script src="../js/index.js"></script>
-    <link rel="icon" type="image/x-icon" href="../img/Favicon.svg">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <script src="./js/index.js"></script>
+    <link rel="icon" type="image/x-icon" href="./img/Favicon.svg">
     <title>Bike With Me</title>
 </head>
 <body id="app">
 <header>
-    <img src="../img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
-    <a href=".."><img src="../img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
+    <img src="./img/menu.svg" alt="Menu" title="Menu" class="menu-icon" onclick="openDrawer()">
+    <a href="index.html"><img src="./img/Logo.svg" alt="Logo" title="Home" class="logo"></a>
     <nav>
         <ul class="navigation-list">
-            <li><a href="..">Home</a></li>
-            <li><a href="../article1">Forest adventure</a></li>
-            <li><a href="../article2">Historical ride</a></li>
-            <li><a href="../article3">Utrecht urban escape</a></li>
-            <li><a href="../article4">Utrecht to Houten</a></li>
-            <li class="selected-title"><a href="../contactus">Contact us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="article1.html">Forest adventure</a></li>
+            <li><a href="article2.html">Historical ride</a></li>
+            <li><a href="article3.html">Utrecht urban escape</a></li>
+            <li><a href="article4.html">Utrecht to Houten</a></li>
+            <li class="selected-title"><a href="contactus.html">Contact us</a></li>
         </ul>
     </nav>
 </header>
 <aside id="navigation-drawer" class="drawer-closed">
     <section class="navigation-content">
         <section class="drawer-header">
-            <img src="../img/Logo.svg" alt="Logo" title="Logo">
-            <img src="../img/menu.svg"
+            <img src="./img/Logo.svg" alt="Logo" title="Logo">
+            <img src="./img/menu.svg"
                  alt="Menu"
                  title="Menu"
                  class="menu-icon"
@@ -37,21 +37,21 @@
         </section>
         <nav class="drawer-navigation">
             <ul class="drawer-navigation-list">
-                <li><a href="..">Home</a></li>
-                <li><a href="../article1">Forest adventure</a></li>
-                <li><a href="../article2">Historical ride</a></li>
-                <li><a href="../article3">Utrecht urban escape</a></li>
-                <li><a href="../article4">Utrecht to Houten</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="article1.html">Forest adventure</a></li>
+                <li><a href="article2.html">Historical ride</a></li>
+                <li><a href="article3.html">Utrecht urban escape</a></li>
+                <li><a href="article4.html">Utrecht to Houten</a></li>
             </ul>
         </nav>
-        <section class="contact-us-drawer"><a href="../contactus" class="selected-title">Contact us</a></section>
+        <section class="contact-us-drawer"><a href="contactus.html" class="selected-title">Contact us</a></section>
     </section>
     <section id="overlay"></section>
 </aside>
 <main id="content-container">
     <article class="contact-page">
         <section class="contact-header">User service</section>
-        <form class="contact-form" action="../redirect.html">
+        <form class="contact-form" action="./redirect.html">
             <legend><strong>Contact form:</strong></legend>
             <section class="gender-input">
                 <section>
@@ -102,9 +102,9 @@
 </main>
 <footer><small class="copyright">&copy; Copyright 2023</small>
     <section class="contact-details">
-        <img src="../img/mail.svg" alt="mail" title="Mail us">
-        <img src="../img/phone.svg" alt="phone" title="Call us">
-        <img src="../img/instagram.svg" alt="instagram" title="Find us on instagram">
+        <img src="./img/mail.svg" alt="mail" title="Mail us">
+        <img src="./img/phone.svg" alt="phone" title="Call us">
+        <img src="./img/instagram.svg" alt="instagram" title="Find us on instagram">
     </section>
 </footer>
 </body>
